public static class PlayerAnimationConstants
{
    public const string JumpMultiplier = "JumpMultiplier";
    public const string RollMultiplier = "RollMultiplier";
    public const string IsJumping = "isJumping";
    public const string PlayerEnable = "playerEnable";
    public const string StartRun = "startRun";
    public const string IsDead = "isDead";
    public const string IsRolling = "isRolling";
}
